Updated Security config